# stm32mp-sign-tool

./: .gitignore  CMakeLists.txt  README.md  brainpool_private_key.pem  crypto_support.cpp  crypto_support.hpp  image.stm32  image.stm32.signed  openssl_raii.hpp  private_key.pem  stm32_image_format.cpp  stm32_image_format.hpp  stm32_image_format_internal.hpp  stm32_image_format_mp15.cpp  stm32mp-dump-header.py  stm32mp-gen-image.py  stm32mp-sign-tool  stm32mp-sign-tool.cpp  stm32mp-sign-tool_test.sh
.github/: pull_request_template.md
.github/workflows/: cmake-single-platform.yml
.softhsm/: softhsm2.conf
